--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: cursive;
-    font-size: 18px;
     color: rgb(91, 91, 91);
 }
 
@@ -19,16 +17,14 @@
     box-shadow: 0 2px 5px #000;
 
 }
-.logo img{
-    height: 88px;
-    width: 120px;
-}
-.logo{
-    width: 20%;
+
+.logo__img{
+    width: 30%;
+    height: 95%;
     margin-left: 45px;
     margin-right: 15px;
 }
-.item__view img{
+.item__view__img{
     width: 50px;
     height: 50px;
 }
@@ -93,7 +89,7 @@
     box-sizing: border-box;
     top: 180%;
     right: 0;
-    border: 1px rgb(119, 214, 125) solid;
+    box-shadow:  0 0 2px 2px rgb(139, 223, 145);
     height: 355px;
     width: 280px;
     margin-right: 15px;
@@ -134,6 +130,7 @@
     background-color: rgb(223, 245, 225);
     
 }
+
 .btn:focus,
 .btn:hover {
     color: #17a212;
@@ -144,11 +141,21 @@
     border-radius: 3px;
 }
 
+.checkbox__more:checked + .more__label > .visible{
+    display: none;
+} 
+.checkbox__more:checked + .more__label > .hide{
+    display: block;
+} 
+
 .btn{
     display: block;
     line-height: 1;
     font-size: 2em;
     height: 1;
+}
+.hide{
+    display: none;
 }
 .main__content{
   text-transform:uppercase;
@@ -157,8 +164,62 @@
   margin: 30px;
   
 }
-h1{
+.some__text{
     color: #17a212;
     font-size: 55px;
 }
 
+@media (max-width: 767.99px) {
+    .some__text{
+        padding: 0 20px;
+        font-size: 30px;
+
+    }
+    .menu__item{
+        justify-content: space-between;
+        margin-right: 30px;
+        font-size: 22px;
+    }
+    .logo__img{
+        width: 37%;
+        height: 95%;
+        margin-left: 30px;
+        margin-right: 15px;
+    }
+  }
+  
+  @media (max-width: 424.98px) {
+    .menu__item{
+        justify-content: space-between;
+        margin-right: 15px;
+        font-size: 20px;
+    }
+    .some__text{
+        padding: 0 20px;
+        font-size: 20px;
+    }
+    .logo__img{
+        width: 50%;
+        height: 95%;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .item__view__img{
+        width: 25px;
+        height: 25px;
+    }
+    .more__item{
+        margin-right: 20px;
+    }
+    .popup__item{
+        margin-right: 5px;
+    }
+    .btn{
+        font-size: 1.2em;
+    }
+    .checkbox__main:checked ~ .popup__list{
+        height: 250px;
+        width: 210px;
+    }
+
+  }
